--- a/pricing/index.html
+++ b/pricing/index.html
@@ -20,7 +20,7 @@
             width: 3.5rem;
         }
 
-         .check-icon::before {
+        .check-icon::before {
             content: "\f00c";
             font-family: FontAwesome, sans-serif;
             font-size: larger;
@@ -131,104 +131,111 @@
     </tr>
     <tr>
         <td class="sla-number-column"><em><span class="pull-right">11.</span></em></td>
+        <td>Security<sup>3)</sup> (HTTPS)</td>
+        <td class="sla-plan-column"></td>
+        <td class="sla-plan-column"><i class="check-icon"></i></td>
+        <td class="sla-plan-column"><i class="check-icon"></i></td>
+    </tr>
+    <tr>
+        <td class="sla-number-column"><em><span class="pull-right">12.</span></em></td>
         <td>Basic support for most browsers</td>
         <td class="sla-plan-column"><i class="check-icon"></i></td>
         <td class="sla-plan-column"><i class="check-icon"></i></td>
         <td class="sla-plan-column"><i class="check-icon"></i></td>
     </tr>
     <tr>
-        <td class="sla-number-column"><em><span class="pull-right">12.</span></em></td>
+        <td class="sla-number-column"><em><span class="pull-right">13.</span></em></td>
         <td>Full browser support: Chrome</td>
         <td class="sla-plan-column"><i class="check-icon"></i></td>
         <td class="sla-plan-column"><i class="check-icon"></i></td>
         <td class="sla-plan-column"><i class="check-icon"></i></td>
     </tr>
     <tr>
-        <td class="sla-number-column"><em><span class="pull-right">13.</span></em></td>
+        <td class="sla-number-column"><em><span class="pull-right">14.</span></em></td>
         <td>Full browser support: Firefox, and Internet Explorer (version 10 and above)</td>
         <td class="sla-plan-column"></td>
         <td class="sla-plan-column"><i class="check-icon"></i></td>
         <td class="sla-plan-column"><i class="check-icon"></i></td>
     </tr>
     <tr>
-        <td class="sla-number-column"><em><span class="pull-right">14.</span></em></td>
+        <td class="sla-number-column"><em><span class="pull-right">15.</span></em></td>
         <td>Full browser support: Opera, Safari, Android Browser, Internet Explorer (version 9)</td>
         <td class="sla-plan-column"></td>
         <td class="sla-plan-column"></td>
         <td class="sla-plan-column"><i class="check-icon"></i></td>
     </tr>
     <tr>
-        <td class="sla-number-column"><em><span class="pull-right">15.</span></em></td>
+        <td class="sla-number-column"><em><span class="pull-right">16.</span></em></td>
         <td>Full browser support: Internet Explorer (version 8 and below)</td>
         <td colspan="3">
             <span class="pull-right" style="font-size:smaller;white-space: nowrap;margin-right: 3rem;"><em>Make me an offer I can't refuse</em></span>
         </td>
     </tr>
     <tr>
-        <td class="sla-number-column"><em><span class="pull-right">16.</span></em></td>
+        <td class="sla-number-column"><em><span class="pull-right">17.</span></em></td>
         <td>Support for most screen sizes (PC, laptop, tablet, mobile)</td>
         <td class="sla-plan-column"><i class="check-icon"></i></td>
         <td class="sla-plan-column"><i class="check-icon"></i></td>
         <td class="sla-plan-column"><i class="check-icon"></i></td>
     </tr>
     <tr>
-        <td class="sla-number-column"><em><span class="pull-right">17.</span></em></td>
+        <td class="sla-number-column"><em><span class="pull-right">18.</span></em></td>
         <td>Support for <em>all</em> screen sizes</td>
         <td class="sla-plan-column"></td>
         <td class="sla-plan-column"><i class="check-icon"></i></td>
         <td class="sla-plan-column"><i class="check-icon"></i></td>
     </tr>
     <tr>
-        <td class="sla-number-column"><em><span class="pull-right">18.</span></em></td>
+        <td class="sla-number-column"><em><span class="pull-right">19.</span></em></td>
         <td>Support for touch devices</td>
         <td class="sla-plan-column"><i class="check-icon"></i></td>
         <td class="sla-plan-column"><i class="check-icon"></i></td>
         <td class="sla-plan-column"><i class="check-icon"></i></td>
     </tr>
     <tr>
-        <td class="sla-number-column"><em><span class="pull-right">19.</span></em></td>
+        <td class="sla-number-column"><em><span class="pull-right">20.</span></em></td>
         <td>Mean response time: < 2 sec</td>
         <td class="sla-plan-column"><i class="check-icon"></i></td>
         <td class="sla-plan-column"><i class="check-icon"></i></td>
         <td class="sla-plan-column"><i class="check-icon"></i></td>
     </tr>
     <tr>
-        <td class="sla-number-column"><em><span class="pull-right">20.</span></em></td>
+        <td class="sla-number-column"><em><span class="pull-right">21.</span></em></td>
         <td>Mean response time: < 1 sec</td>
         <td class="sla-plan-column"></td>
         <td class="sla-plan-column"><i class="check-icon"></i></td>
         <td class="sla-plan-column"><i class="check-icon"></i></td>
     </tr>
     <tr>
-        <td class="sla-number-column"><em><span class="pull-right">21.</span></em></td>
+        <td class="sla-number-column"><em><span class="pull-right">22.</span></em></td>
         <td>Mean response time: < 0.5 sec</td>
         <td class="sla-plan-column"></td>
         <td class="sla-plan-column"></td>
         <td class="sla-plan-column"><i class="check-icon"></i></td>
     </tr>
     <tr>
-        <td class="sla-number-column"><em><span class="pull-right">22.</span></em></td>
+        <td class="sla-number-column"><em><span class="pull-right">23.</span></em></td>
         <td>"Worst case" response time: < 8 sec</td>
         <td class="sla-plan-column"><i class="check-icon"></i></td>
         <td class="sla-plan-column"><i class="check-icon"></i></td>
         <td class="sla-plan-column"><i class="check-icon"></i></td>
     </tr>
     <tr>
-        <td class="sla-number-column"><em><span class="pull-right">23.</span></em></td>
+        <td class="sla-number-column"><em><span class="pull-right">24.</span></em></td>
         <td>"Worst case" response time: < 4 sec</td>
         <td class="sla-plan-column"></td>
         <td class="sla-plan-column"><i class="check-icon"></i></td>
         <td class="sla-plan-column"><i class="check-icon"></i></td>
     </tr>
     <tr>
-        <td class="sla-number-column"><em><span class="pull-right">24.</span></em></td>
+        <td class="sla-number-column"><em><span class="pull-right">25.</span></em></td>
         <td>"Worst case" response time: < 2 sec</td>
         <td class="sla-plan-column"></td>
         <td class="sla-plan-column"></td>
         <td class="sla-plan-column"><i class="check-icon"></i></td>
     </tr>
     <tr>
-        <td class="sla-number-column"><em><span class="pull-right">25.</span></em></td>
+        <td class="sla-number-column"><em><span class="pull-right">26.</span></em></td>
         <td>"Worst case" response time: < 1 sec</td>
         <td colspan="3">
             <span class="pull-right" style="font-size:smaller;white-space: nowrap;margin-right: 3rem;"><em>Make me an offer I can't refuse</em></span>
@@ -248,70 +255,70 @@
         <th class="sla-plan-column"><h4><em><strong>$$$</strong></em></h4></th>
     </tr>
     <tr>
-        <td class="sla-number-column"><em><span class="pull-right">26.</span></em></td>
+        <td class="sla-number-column"><em><span class="pull-right">27.</span></em></td>
         <td>Availability: 99% ("two nines", max downtime per year: 3.65 days)</td>
         <td class="sla-plan-column"><i class="check-icon"></i></td>
         <td class="sla-plan-column"><i class="check-icon"></i></td>
         <td class="sla-plan-column"><i class="check-icon"></i></td>
     </tr>
     <tr>
-        <td class="sla-number-column"><em><span class="pull-right">27.</span></em></td>
+        <td class="sla-number-column"><em><span class="pull-right">28.</span></em></td>
         <td>Availability: 99.9% ("three nines", max downtime per year: 8.76 hours)</td>
         <td class="sla-plan-column"></td>
         <td class="sla-plan-column"><i class="check-icon"></i></td>
         <td class="sla-plan-column"><i class="check-icon"></i></td>
     </tr>
     <tr>
-        <td class="sla-number-column"><em><span class="pull-right">28.</span></em></td>
+        <td class="sla-number-column"><em><span class="pull-right">29.</span></em></td>
         <td>High availability ("four nines" and beyond)</td>
         <td colspan="3">
             <span class="pull-right" style="font-size:smaller;white-space: nowrap;margin-right: 3rem;"><em>Make me an offer I can't refuse</em></span>
         </td>
     </tr>
     <tr>
-        <td class="sla-number-column"><em><span class="pull-right">29.</span></em></td>
+        <td class="sla-number-column"><em><span class="pull-right">30.</span></em></td>
         <td>Storage: < 100 MB</td>
         <td class="sla-plan-column"><i class="check-icon"></i></td>
         <td class="sla-plan-column"><i class="check-icon"></i></td>
         <td class="sla-plan-column"><i class="check-icon"></i></td>
     </tr>
     <tr>
-        <td class="sla-number-column"><em><span class="pull-right">30.</span></em></td>
+        <td class="sla-number-column"><em><span class="pull-right">31.</span></em></td>
         <td>Storage: > 100 MB</td>
         <td class="sla-plan-column"></td>
         <td class="sla-plan-column"><i class="check-icon"></i></td>
         <td class="sla-plan-column"><i class="check-icon"></i></td>
     </tr>
     <tr>
-        <td class="sla-number-column"><em><span class="pull-right">31.</span></em></td>
+        <td class="sla-number-column"><em><span class="pull-right">32.</span></em></td>
         <td>Storage: > 10 GB</td>
         <td class="sla-plan-column"></td>
         <td class="sla-plan-column"></td>
         <td class="sla-plan-column"><i class="check-icon"></i></td>
     </tr>
     <tr>
-        <td class="sla-number-column"><em><span class="pull-right">32.</span></em></td>
+        <td class="sla-number-column"><em><span class="pull-right">33.</span></em></td>
         <td>Backup services (guaranteed no data loss)</td>
         <td class="sla-plan-column"></td>
         <td class="sla-plan-column"><i class="check-icon"></i></td>
         <td class="sla-plan-column"><i class="check-icon"></i></td>
     </tr>
     <tr>
-        <td class="sla-number-column"><em><span class="pull-right">33.</span></em></td>
+        <td class="sla-number-column"><em><span class="pull-right">34.</span></em></td>
         <td>Bug reporting / Issue tracking</td>
         <td class="sla-plan-column"><i class="check-icon"></i></td>
         <td class="sla-plan-column"><i class="check-icon"></i></td>
         <td class="sla-plan-column"><i class="check-icon"></i></td>
     </tr>
     <tr>
-        <td class="sla-number-column"><em><span class="pull-right">34.</span></em></td>
+        <td class="sla-number-column"><em><span class="pull-right">35.</span></em></td>
         <td>Online support, UTC day-time</td>
         <td class="sla-plan-column"></td>
         <td class="sla-plan-column"><i class="check-icon"></i></td>
         <td class="sla-plan-column"><i class="check-icon"></i></td>
     </tr>
     <tr>
-        <td class="sla-number-column"><em><span class="pull-right">35.</span></em></td>
+        <td class="sla-number-column"><em><span class="pull-right">36.</span></em></td>
         <td>Online support, 24/7</td>
         <td class="sla-plan-column"></td>
         <td class="sla-plan-column"></td>
@@ -334,10 +341,16 @@
             <span>More or less regular consultant rates</span>
         </span>
     </div>
+    <div class="clearfix">
+        <span class="pull-left" style="margin-left: 1rem;">
+            <sup>3)</sup>
+            <span>Encrypted communication end server identity verification</span>
+        </span>
+    </div>
     <div>
         <span class="pull-right" style="margin-right: 3rem;">
             <span style="font-size: large;">(</span>
-            <a href="https://github.com/eirikt/eirikt.github.io" target="_new">v1.1</a>
+            <a href="https://github.com/eirikt/eirikt.github.io" target="_new">v1.2</a>
             <span style="font-size: large;">)</span>
         </span>
     </div>
