--- a/pricing/index.html
+++ b/pricing/index.html
@@ -26,7 +26,7 @@
 </head>
 <html>
 <body>
-<h2 class="centered ">My Service Level Agreement (SLA) plans</h2>
+<h2 class="centered ">My Service Level Agreement (<a href="http://en.wikipedia.org/wiki/Service-level_agreement">SLA</a>) plans</h2>
 <h4 class="centered">make a choice - <a href="https://github.com/eirikt">give me a call</a></h4>
 
 <table class="table table-condensed table-striped table-hover" style="margin-top: 4rem;">
@@ -359,9 +359,16 @@
     </tr>
     <tr>
         <td class="sla-number-column"><em><span class="pull-right">41.</span></em></td>
-        <td>Backup services (guarantee against no data loss)</td>
+        <td>Backup services</td>
         <td class="sla-plan-column"></td>
         <td class="sla-plan-column"><i class="check-icon"></i></td>
+        <td class="sla-plan-column"><i class="check-icon"></i></td>
+    </tr>
+    <tr>
+        <td class="sla-number-column"><em><span class="pull-right">42.</span></em></td>
+        <td>Legal guarantee against data loss</td>
+        <td class="sla-plan-column"></td>
+        <td class="sla-plan-column"></td>
         <td class="sla-plan-column"><i class="check-icon"></i></td>
     </tr>
     </tbody>
@@ -378,42 +385,42 @@
         <th class="sla-plan-column"><h4><em><strong>$$$</strong></em></h4></th>
     </tr>
     <tr>
-        <td class="sla-number-column"><em><span class="pull-right">42.</span></em></td>
+        <td class="sla-number-column"><em><span class="pull-right">43.</span></em></td>
         <td>Site traffic analysis</td>
         <td class="sla-plan-column"></td>
         <td class="sla-plan-column"><i class="check-icon"></i></td>
         <td class="sla-plan-column"><i class="check-icon"></i></td>
     </tr>
     <tr>
-        <td class="sla-number-column"><em><span class="pull-right">43.</span></em></td>
+        <td class="sla-number-column"><em><span class="pull-right">44.</span></em></td>
         <td>Available <a href="http://en.wikipedia.org/wiki/Issue_tracking_system">issue tracking</a> facility</td>
         <td class="sla-plan-column"><i class="check-icon"></i></td>
         <td class="sla-plan-column"><i class="check-icon"></i></td>
         <td class="sla-plan-column"><i class="check-icon"></i></td>
     </tr>
     <tr>
-        <td class="sla-number-column"><em><span class="pull-right">44.</span></em></td>
+        <td class="sla-number-column"><em><span class="pull-right">45.</span></em></td>
         <td>Available <a href="http://en.wikipedia.org/wiki/Software_bug">bug</a> reporting facility</td>
         <td class="sla-plan-column"><i class="check-icon"></i></td>
         <td class="sla-plan-column"><i class="check-icon"></i></td>
         <td class="sla-plan-column"><i class="check-icon"></i></td>
     </tr>
     <tr>
-        <td class="sla-number-column"><em><span class="pull-right">45.</span></em></td>
+        <td class="sla-number-column"><em><span class="pull-right">46.</span></em></td>
         <td>Thorough documentation</td>
         <td class="sla-plan-column"></td>
         <td class="sla-plan-column"><i class="check-icon"></i></td>
         <td class="sla-plan-column"><i class="check-icon"></i></td>
     </tr>
     <tr>
-        <td class="sla-number-column"><em><span class="pull-right">46.</span></em></td>
+        <td class="sla-number-column"><em><span class="pull-right">47.</span></em></td>
         <td>Online support, UTC day-time</td>
         <td class="sla-plan-column"></td>
         <td class="sla-plan-column"><i class="check-icon"></i></td>
         <td class="sla-plan-column"><i class="check-icon"></i></td>
     </tr>
     <tr>
-        <td class="sla-number-column"><em><span class="pull-right">47.</span></em></td>
+        <td class="sla-number-column"><em><span class="pull-right">48.</span></em></td>
         <td>Online support, 24/7</td>
         <td class="sla-plan-column"></td>
         <td class="sla-plan-column"></td>
@@ -439,7 +446,7 @@
     <div class="clearfix">
         <span class="pull-left" style="margin-left: 1rem;">
             <sup>3)</sup>
-            <span>But you probably don't want this on the cheapest price plan as it will look weird without a valid HTTPS certificate (11.)</span>
+            <span>But you probably don't want this on the cheapest price plan as it will look weird without a valid HTTPS certificate (12.)</span>
         </span>
     </div>
     <div class="clearfix">
@@ -457,7 +464,7 @@
     <div>
         <span class="pull-right" style="margin-right: 3rem;margin-bottom: 2rem;">
             <span style="font-size: large;">(</span>
-            <a href="https://github.com/eirikt/eirikt.github.io" target="_new">v1.5</a>
+            <a href="https://github.com/eirikt/eirikt.github.io" target="_new">v1.6</a>
             <span style="font-size: large;">)</span>
         </span>
     </div>
