--- a/pricing/index.html
+++ b/pricing/index.html
@@ -409,7 +409,7 @@
         <td class="sla-number-column"><em><span class="pull-right">46.</span></em></td>
         <td>Thorough documentation</td>
         <td class="sla-plan-column"></td>
-        <td class="sla-plan-column"><i class="check-icon"></i></td>
+        <td class="sla-plan-column"></td>
         <td class="sla-plan-column"><i class="check-icon"></i></td>
     </tr>
     <tr>
@@ -459,13 +459,6 @@
         <span class="pull-left" style="margin-left: 1rem;">
             <sup>5)</sup>
             <span>Via well-known federated identity provider(s), e.g. Facebook, Google, LinkedIn, and/or Twitter</span>
-        </span>
-    </div>
-    <div>
-        <span class="pull-right" style="margin-right: 3rem;margin-bottom: 2rem;">
-            <span style="font-size: large;">(</span>
-            <a href="https://github.com/eirikt/eirikt.github.io" target="_new">v1.6</a>
-            <span style="font-size: large;">)</span>
         </span>
     </div>
 </footer>
