--- a/pricing/index.html
+++ b/pricing/index.html
@@ -200,48 +200,62 @@
     </tr>
     <tr>
         <td class="sla-number-column"><em><span class="pull-right">22.</span></em></td>
+        <td>Web Content Accessibility, <a href="http://www.w3.org/WAI/intro/wcag">WCAG 2.0</a> (Level A) compliance<sup>&nbsp;3)</sup></td>
+        <td class="sla-plan-column"></td>
+        <td class="sla-plan-column"><i class="check-icon"></i></td>
+        <td class="sla-plan-column"><i class="check-icon"></i></td>
+    </tr>
+    <tr>
+        <td class="sla-number-column"><em><span class="pull-right">23.</span></em></td>
+        <td>Web Content Accessibility, <a href="http://www.w3.org/WAI/intro/wcag">WCAG 2.0</a> (Level AA) compliance<sup>&nbsp;3)</sup></td>
+        <td class="sla-plan-column"></td>
+        <td class="sla-plan-column"></td>
+        <td class="sla-plan-column"><i class="check-icon"></i></td>
+    </tr>
+    <tr>
+        <td class="sla-number-column"><em><span class="pull-right">24.</span></em></td>
         <td>Mean response time: < 2 sec</td>
         <td class="sla-plan-column"><i class="check-icon"></i></td>
         <td class="sla-plan-column"><i class="check-icon"></i></td>
         <td class="sla-plan-column"><i class="check-icon"></i></td>
     </tr>
     <tr>
-        <td class="sla-number-column"><em><span class="pull-right">23.</span></em></td>
+        <td class="sla-number-column"><em><span class="pull-right">25.</span></em></td>
         <td>Mean response time: < 1 sec</td>
         <td class="sla-plan-column"></td>
         <td class="sla-plan-column"><i class="check-icon"></i></td>
         <td class="sla-plan-column"><i class="check-icon"></i></td>
     </tr>
     <tr>
-        <td class="sla-number-column"><em><span class="pull-right">24.</span></em></td>
+        <td class="sla-number-column"><em><span class="pull-right">26.</span></em></td>
         <td>Mean response time: < 0.5 sec</td>
         <td class="sla-plan-column"></td>
         <td class="sla-plan-column"></td>
         <td class="sla-plan-column"><i class="check-icon"></i></td>
     </tr>
     <tr>
-        <td class="sla-number-column"><em><span class="pull-right">25.</span></em></td>
+        <td class="sla-number-column"><em><span class="pull-right">27.</span></em></td>
         <td>"Worst case" response time: < 8 sec</td>
         <td class="sla-plan-column"><i class="check-icon"></i></td>
         <td class="sla-plan-column"><i class="check-icon"></i></td>
         <td class="sla-plan-column"><i class="check-icon"></i></td>
     </tr>
     <tr>
-        <td class="sla-number-column"><em><span class="pull-right">26.</span></em></td>
+        <td class="sla-number-column"><em><span class="pull-right">28.</span></em></td>
         <td>"Worst case" response time: < 4 sec</td>
         <td class="sla-plan-column"></td>
         <td class="sla-plan-column"><i class="check-icon"></i></td>
         <td class="sla-plan-column"><i class="check-icon"></i></td>
     </tr>
     <tr>
-        <td class="sla-number-column"><em><span class="pull-right">27.</span></em></td>
+        <td class="sla-number-column"><em><span class="pull-right">29.</span></em></td>
         <td>"Worst case" response time: < 2 sec</td>
         <td class="sla-plan-column"></td>
         <td class="sla-plan-column"></td>
         <td class="sla-plan-column"><i class="check-icon"></i></td>
     </tr>
     <tr>
-        <td class="sla-number-column"><em><span class="pull-right">28.</span></em></td>
+        <td class="sla-number-column"><em><span class="pull-right">30.</span></em></td>
         <td>"Worst case" response time: < 1 sec</td>
         <td colspan="3">
             <span class="pull-right" style="font-size:smaller;white-space: nowrap;margin-right: 3rem;"><em>Make me an offer I can't refuse</em></span>
@@ -261,42 +275,42 @@
         <th class="sla-plan-column"><h4><em><strong>$$$</strong></em></h4></th>
     </tr>
     <tr>
-        <td class="sla-number-column"><em><span class="pull-right">29.</span></em></td>
-        <td>Encrypted data traffic</td>
-        <td class="sla-plan-column"><i class="check-icon"><sup>&nbsp;3)</sup></i></td>
-        <td class="sla-plan-column"><i class="check-icon"></i></td>
-        <td class="sla-plan-column"><i class="check-icon"></i></td>
-    </tr>
-    <tr>
-        <td class="sla-number-column"><em><span class="pull-right">30.</span></em></td>
-        <td>Server <em>identity verification</em> (also known as <em><a href="http://en.wikipedia.org/wiki/Authentication">authentication</a></em>)</td>
-        <td class="sla-plan-column"><i class="check-icon"><sup>&nbsp;3)</sup></i></td>
-        <td class="sla-plan-column"><i class="check-icon"></i></td>
-        <td class="sla-plan-column"><i class="check-icon"></i></td>
-    </tr>
-    <tr>
         <td class="sla-number-column"><em><span class="pull-right">31.</span></em></td>
-        <td>User/Client <em>identity verification</em> (also known as <em><a href="http://en.wikipedia.org/wiki/Authentication">authentication</a></em>) via password-based log-in procedures<sup>4)</sup></td>
-        <td class="sla-plan-column"></td>
-        <td class="sla-plan-column"></td>
+        <td>Encrypted data traffic</td>
+        <td class="sla-plan-column"><i class="check-icon"><sup>&nbsp;4)</sup></i></td>
+        <td class="sla-plan-column"><i class="check-icon"></i></td>
         <td class="sla-plan-column"><i class="check-icon"></i></td>
     </tr>
     <tr>
         <td class="sla-number-column"><em><span class="pull-right">32.</span></em></td>
-        <td>Single Sign-On (<a href="http://en.wikipedia.org/wiki/Single_sign-on">SSO</a>)<sup>5)</sup></td>
-        <td class="sla-plan-column"></td>
-        <td class="sla-plan-column"></td>
+        <td>Server <em>identity verification</em> (also known as <em><a href="http://en.wikipedia.org/wiki/Authentication">authentication</a></em>)</td>
+        <td class="sla-plan-column"><i class="check-icon"><sup>&nbsp;4)</sup></i></td>
+        <td class="sla-plan-column"><i class="check-icon"></i></td>
         <td class="sla-plan-column"><i class="check-icon"></i></td>
     </tr>
     <tr>
         <td class="sla-number-column"><em><span class="pull-right">33.</span></em></td>
-        <td><a href="http://en.wikipedia.org/wiki/Role-based_access_control">Role-based access control</a></td>
+        <td>User/Client <em>identity verification</em> (also known as <em><a href="http://en.wikipedia.org/wiki/Authentication">authentication</a></em>) via password-based log-in procedures<sup>&nbsp;5)</sup></td>
         <td class="sla-plan-column"></td>
         <td class="sla-plan-column"></td>
         <td class="sla-plan-column"><i class="check-icon"></i></td>
     </tr>
     <tr>
         <td class="sla-number-column"><em><span class="pull-right">34.</span></em></td>
+        <td>Single Sign-On (<a href="http://en.wikipedia.org/wiki/Single_sign-on">SSO</a>)<sup>&nbsp;6)</sup></td>
+        <td class="sla-plan-column"></td>
+        <td class="sla-plan-column"></td>
+        <td class="sla-plan-column"><i class="check-icon"></i></td>
+    </tr>
+    <tr>
+        <td class="sla-number-column"><em><span class="pull-right">35.</span></em></td>
+        <td><a href="http://en.wikipedia.org/wiki/Role-based_access_control"><em>Role-based access control</em></a> (also known as <em><a href="http://en.wikipedia.org/wiki/Authorization">authorization</a></em>)</td>
+        <td class="sla-plan-column"></td>
+        <td class="sla-plan-column"></td>
+        <td class="sla-plan-column"><i class="check-icon"></i></td>
+    </tr>
+    <tr>
+        <td class="sla-number-column"><em><span class="pull-right">36.</span></em></td>
         <td>User administration</td>
         <td class="sla-plan-column"></td>
         <td class="sla-plan-column"></td>
@@ -316,56 +330,56 @@
         <th class="sla-plan-column"><h4><em><strong>$$$</strong></em></h4></th>
     </tr>
     <tr>
-        <td class="sla-number-column"><em><span class="pull-right">35.</span></em></td>
+        <td class="sla-number-column"><em><span class="pull-right">37.</span></em></td>
         <td>Availability: 99% ("two nines", max downtime per year: 3.65 days)</td>
         <td class="sla-plan-column"><i class="check-icon"></i></td>
         <td class="sla-plan-column"><i class="check-icon"></i></td>
         <td class="sla-plan-column"><i class="check-icon"></i></td>
     </tr>
     <tr>
-        <td class="sla-number-column"><em><span class="pull-right">36.</span></em></td>
+        <td class="sla-number-column"><em><span class="pull-right">38.</span></em></td>
         <td>Availability: 99.9% ("three nines", max downtime per year: 8.76 hours)</td>
         <td class="sla-plan-column"></td>
         <td class="sla-plan-column"><i class="check-icon"></i></td>
         <td class="sla-plan-column"><i class="check-icon"></i></td>
     </tr>
     <tr>
-        <td class="sla-number-column"><em><span class="pull-right">37.</span></em></td>
+        <td class="sla-number-column"><em><span class="pull-right">39.</span></em></td>
         <td><a href="http://en.wikipedia.org/wiki/High_availability">High availability</a> ("four nines" and beyond)</td>
         <td colspan="3">
             <span class="pull-right" style="font-size:smaller;white-space: nowrap;margin-right: 3rem;"><em>Make me an offer I can't refuse</em></span>
         </td>
     </tr>
     <tr>
-        <td class="sla-number-column"><em><span class="pull-right">38.</span></em></td>
+        <td class="sla-number-column"><em><span class="pull-right">40.</span></em></td>
         <td>Storage: < 100 <a href="http://en.wikipedia.org/wiki/Megabyte">MB</a></td>
         <td class="sla-plan-column"><i class="check-icon"></i></td>
         <td class="sla-plan-column"><i class="check-icon"></i></td>
         <td class="sla-plan-column"><i class="check-icon"></i></td>
     </tr>
     <tr>
-        <td class="sla-number-column"><em><span class="pull-right">39.</span></em></td>
+        <td class="sla-number-column"><em><span class="pull-right">41.</span></em></td>
         <td>Storage: > 100 <a href="http://en.wikipedia.org/wiki/Megabyte">MB</a></td>
         <td class="sla-plan-column"></td>
         <td class="sla-plan-column"><i class="check-icon"></i></td>
         <td class="sla-plan-column"><i class="check-icon"></i></td>
     </tr>
     <tr>
-        <td class="sla-number-column"><em><span class="pull-right">40.</span></em></td>
+        <td class="sla-number-column"><em><span class="pull-right">42.</span></em></td>
         <td>Storage: > 10 <a href="http://en.wikipedia.org/wiki/Gigabyte">GB</a></td>
         <td class="sla-plan-column"></td>
         <td class="sla-plan-column"></td>
         <td class="sla-plan-column"><i class="check-icon"></i></td>
     </tr>
     <tr>
-        <td class="sla-number-column"><em><span class="pull-right">41.</span></em></td>
+        <td class="sla-number-column"><em><span class="pull-right">43.</span></em></td>
         <td>Backup services</td>
         <td class="sla-plan-column"></td>
         <td class="sla-plan-column"><i class="check-icon"></i></td>
         <td class="sla-plan-column"><i class="check-icon"></i></td>
     </tr>
     <tr>
-        <td class="sla-number-column"><em><span class="pull-right">42.</span></em></td>
+        <td class="sla-number-column"><em><span class="pull-right">44.</span></em></td>
         <td>Legal guarantee against data loss</td>
         <td class="sla-plan-column"></td>
         <td class="sla-plan-column"></td>
@@ -385,42 +399,42 @@
         <th class="sla-plan-column"><h4><em><strong>$$$</strong></em></h4></th>
     </tr>
     <tr>
-        <td class="sla-number-column"><em><span class="pull-right">43.</span></em></td>
+        <td class="sla-number-column"><em><span class="pull-right">45.</span></em></td>
         <td>Site traffic analysis</td>
         <td class="sla-plan-column"></td>
         <td class="sla-plan-column"><i class="check-icon"></i></td>
         <td class="sla-plan-column"><i class="check-icon"></i></td>
     </tr>
     <tr>
-        <td class="sla-number-column"><em><span class="pull-right">44.</span></em></td>
+        <td class="sla-number-column"><em><span class="pull-right">46.</span></em></td>
         <td>Available <a href="http://en.wikipedia.org/wiki/Issue_tracking_system">issue tracking</a> facility</td>
         <td class="sla-plan-column"><i class="check-icon"></i></td>
         <td class="sla-plan-column"><i class="check-icon"></i></td>
         <td class="sla-plan-column"><i class="check-icon"></i></td>
     </tr>
     <tr>
-        <td class="sla-number-column"><em><span class="pull-right">45.</span></em></td>
+        <td class="sla-number-column"><em><span class="pull-right">47.</span></em></td>
         <td>Available <a href="http://en.wikipedia.org/wiki/Software_bug">bug</a> reporting facility</td>
         <td class="sla-plan-column"><i class="check-icon"></i></td>
         <td class="sla-plan-column"><i class="check-icon"></i></td>
         <td class="sla-plan-column"><i class="check-icon"></i></td>
     </tr>
     <tr>
-        <td class="sla-number-column"><em><span class="pull-right">46.</span></em></td>
+        <td class="sla-number-column"><em><span class="pull-right">48.</span></em></td>
         <td>Thorough documentation</td>
         <td class="sla-plan-column"></td>
         <td class="sla-plan-column"></td>
         <td class="sla-plan-column"><i class="check-icon"></i></td>
     </tr>
     <tr>
-        <td class="sla-number-column"><em><span class="pull-right">47.</span></em></td>
+        <td class="sla-number-column"><em><span class="pull-right">49.</span></em></td>
         <td>Online support, UTC day-time</td>
         <td class="sla-plan-column"></td>
         <td class="sla-plan-column"><i class="check-icon"></i></td>
         <td class="sla-plan-column"><i class="check-icon"></i></td>
     </tr>
     <tr>
-        <td class="sla-number-column"><em><span class="pull-right">48.</span></em></td>
+        <td class="sla-number-column"><em><span class="pull-right">50.</span></em></td>
         <td>Online support, 24/7</td>
         <td class="sla-plan-column"></td>
         <td class="sla-plan-column"></td>
@@ -444,20 +458,29 @@
         </span>
     </div>
     <div class="clearfix">
+        <span class="pull-left" style="margin-left: 1rem;"><sup>...</sup></span>
+    </div>
+    <div class="clearfix">
         <span class="pull-left" style="margin-left: 1rem;">
             <sup>3)</sup>
-            <span>But you probably don't want this on the cheapest price plan as it will look weird without a valid HTTPS certificate (12.)</span>
+            <span>Verified by <a href="http://achecker.ca/checker/index.php">this checker service</a></span>
         </span>
     </div>
     <div class="clearfix">
         <span class="pull-left" style="margin-left: 1rem;">
             <sup>4)</sup>
-            <span>Inclusion of <a href="http://en.wikipedia.org/wiki/CAPTCHA">CAPTCHA</a> is possible</span>
+            <span>But you probably don't want this on the cheapest price plan as it will look weird without a valid HTTPS certificate (12.)</span>
         </span>
     </div>
     <div class="clearfix">
         <span class="pull-left" style="margin-left: 1rem;">
             <sup>5)</sup>
+            <span>Inclusion of <a href="http://en.wikipedia.org/wiki/CAPTCHA">CAPTCHA</a> is possible</span>
+        </span>
+    </div>
+    <div class="clearfix">
+        <span class="pull-left" style="margin-left: 1rem;">
+            <sup>6)</sup>
             <span>Via well-known federated identity provider(s), e.g. Facebook, Google, LinkedIn, and/or Twitter</span>
         </span>
     </div>
